# AIRL

./: .airl-verify-baseline.toml  .gitattributes  .gitignore  .gitmodules  AIRL-Header.md  AIRL-LLM-Guide.md  AIRL-Language-Specification-v0.1.0.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  ECOSYSTEM.md  Makefile  README.md  _bench_input.airl  api-manifest.json  user64.ld  x86_64-airlos.json
.cargo/: config.toml
.github/workflows/: ci.yml  mynameisairl.yml  release.yml
benchmarks/: FINDINGS.md  README.md  analyze.sh  run.sh
benchmarks/edge_cases/: 01_edge.txt  02_edge.txt  03_edge.txt  04_edge.txt  05_edge.txt  06_edge.txt  07_edge.txt  08_edge.txt  09_edge.txt  10_edge.txt  11_edge.txt  12_edge.txt  13_edge.txt  14_edge.txt  15_edge.txt  16_edge.txt  17_edge.txt  18_edge.txt  19_edge.txt  20_edge.txt  21_edge.txt  22_edge.txt  23_edge.txt  24_edge.txt  25_edge.txt
benchmarks/prompts/: airl_system.md  intent_judge.md  intent_recovery.md  python_system.md
benchmarks/results/: perf_2026-03-23_bootstrap_compiler.md  perf_2026-03-23_bytecode.md  perf_2026-03-23_compiled.md  perf_2026-03-23_jit.md  perf_2026-03-23_v0.2.md  run_2026-03-21_141803.md  run_2026-03-21_172517.md  run_2026-03-21_173222.md  run_2026-03-21_174418.md  run_2026-03-21_182409.md
benchmarks/tasks/: 01_safe_divide.md  02_fibonacci.md  03_list_processing.md  04_input_validation.md  05_string_tokenizer.md  06_absolute_value.md  07_gcd.md  08_power.md  09_reverse_list.md  100_variant_payload.md  101_result_chain.md  102_error_collect.md  103_state_machine.md  104_pipeline_compose.md  105_option_chain.md  10_find_max.md  11_remove_duplicates.md  12_zip_lists.md  13_palindrome_check.md  14_count_vowels.md  15_caesar_cipher.md  16_safe_sqrt.md  17_parse_int.md  18_bounded_access.md  19_flatten_list.md  20_group_by_parity.md  21_running_sum.md  22_word_frequency.md  23_matrix_transpose.md  24_merge_sorted.md  25_pipeline.md  26_string_pad.md  27_all_vowels.md  28_replace_all.md  29_prefix_suffix.md  30_split_rejoin.md  31_find_index.md  32_take_elements.md  33_drop_elements.md  34_is_sorted.md  (+65 more)
bootstrap/: bc_compiler.airl  bc_equivalence_test.airl  cli.airl  codegen_c.airl  codegen_c_test.airl  compiler.airl  compiler_integration_test.airl  compiler_test.airl  deftype_test.airl  driver.airl  driver_test.airl  equivalence_test.airl  eval.airl  eval_test.airl  fixpoint_dump.airl  fixpoint_test.airl  fixpoint_tier1_program.airl  g3_compiler.airl  import_test.airl  integration_test.airl  lexer.airl  lexer_test.airl  linearity.airl  main.airl  parser.airl  parser_test.airl  pipeline_test.airl  test_program.airl  typecheck.airl  typecheck_test.airl  types.airl  types_test.airl  z3_bridge.airl  z3_bridge_g3.airl  z3_cache.airl
commands/airgrep/: CLAUDE.md  Makefile  airtest.sexp
commands/airq/: CLAUDE.md  Makefile  airtest.sexp
cranelift-object-patch/: Cargo.toml  README.md
crates/airl-agent/: Cargo.toml
crates/airl-codegen/: Cargo.toml
crates/airl-codegen/src/: jit.rs  lib.rs  lower.rs  marshal.rs  tensor_ops.rs  types.rs
crates/airl-contracts/: Cargo.toml
crates/airl-driver/: Cargo.toml  build.rs
crates/airl-driver/src/: fmt.rs  lib.rs  main.rs  pipeline.rs  repl.rs  resolver.rs  verify_policy.rs
crates/airl-driver/tests/: fixtures.rs  parallel_test.rs  verify_policy.rs
crates/airl-mlir/: Cargo.toml  build.rs
crates/airl-mlir/src/: context.rs  gpu.rs  jit.rs  lib.rs  lower.rs  optimize.rs
crates/airl-rt/: Cargo.toml
crates/airl-rt/src/: aircon.rs  airlos.rs  arithmetic.rs  bc_func.rs  closure.rs  comparison.rs  diag.rs  error.rs  identity.rs  io.rs  lib.rs  list.rs  logic.rs  map.rs  math.rs  memory.rs  misc.rs  pool.rs  sqlite.rs  string.rs  terminal.rs  thread.rs  value.rs  variant.rs  z3.rs
crates/airl-runtime/: Cargo.toml  build.rs
crates/airl-runtime/src/: agent_client.rs  ast_to_ir.rs  builtins.rs  bytecode.rs  bytecode_aot.rs  bytecode_compiler.rs  bytecode_jit.rs  bytecode_jit_full.rs  bytecode_marshal.rs  bytecode_vm.rs  contract_signal.rs  env.rs  error.rs  eval.rs  ir.rs  ir_marshal.rs  ir_vm.rs  jit_contract.rs  lib.rs  pattern.rs  tensor.rs  value.rs
crates/airl-solver/: Cargo.toml
crates/airl-solver/src/: cache.rs  lib.rs  prover.rs  translate.rs
crates/airl-syntax/: Cargo.toml
crates/airl-syntax/fuzz/: Cargo.toml
crates/airl-syntax/fuzz/fuzz_targets/: fuzz_lexer.rs  fuzz_parser.rs
crates/airl-types/: Cargo.toml
cross-build/: Cargo.toml  src
docs/: PROJECT-ANALYSIS.md  legacy-rust-toolchain.md
docs/archive/: 2026-03-24_airl-language-completeness-analysis.md
docs/specs/: 2026-04-02-stdlib-04-collections-dedup-report.md  2026-04-06-aot-rc-move-semantics.md
docs/stdlib/: aircon.md  base64.md  builtins.md  hmac.md  json.md  map.md  math.md  path.md  pbkdf2.md  prelude.md  random.md  result.md  set.md  sha256.md  string.md  test.md
examples/01-hello-world/: hello_world.airl
examples/02-functions-and-contracts/: functions_and_contracts.airl
examples/03-verified-arithmetic/: verified_arithmetic.airl
examples/04-safe-error-handling/: safe_error_handling.airl
examples/05-ownership-and-borrowing/: ownership_and_borrowing.airl
examples/06-tensor-operations/: tensor_operations.airl
examples/07-higher-order-functions/: higher_order_functions.airl
examples/08-agent-orchestration/: orchestrator.airl  (+1 more)
runtime/: Makefile  airl_rt.c  airl_rt.h  airl_rt_bytes.c  airl_rt_http.c  airl_rt_json.c  airl_rt_list.c  airl_rt_map.c  airl_rt_misc.c  airl_rt_process.c  airl_rt_string.c  airl_rt_tcp.c  airl_rt_variant.c  test_rt  test_rt.c
scripts/: bootstrap.sh  build-g3.sh  check-airl.sh  ddc.sh  lint-shadows.py  t-diagram.sh  verify-stdlib-contracts.sh
stdlib/: aircon.airl  base64.airl  collections.md  hmac.airl  io.airl  json.airl  map.airl  map.md  math.airl  math.md  path.airl  pbkdf2.airl  prelude.airl  random.airl  result.airl  result.md  set.airl  set.md  sha256.airl  sqlite.airl  string.airl  string.md  test.airl
tests/: z3_bridge_test.airl
tla/: MC_channels.cfg  MC_cow.cfg  MC_memory.cfg  airl_channels.tla  airl_cow.tla  airl_memory.tla
(+390 files in other folders)
