[workspace]
resolver = "2"
members = [
    "crates/airl-syntax",
    "crates/airl-types",
    "crates/airl-contracts",
    "crates/airl-runtime",
    "crates/airl-agent",
    "crates/airl-codegen",
    "crates/airl-solver",
    "crates/airl-mlir",
    "crates/airl-driver",
]
# Note: airl-mlir requires libzstd-dev and LLVM 19+ for melior.
# If not installed, use: cargo test --workspace --exclude airl-mlir

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
