[workspace]
resolver = "2"
members = [
    "crates/airl-syntax",
    "crates/airl-types",
    "crates/airl-contracts",
    "crates/airl-runtime",
    "crates/airl-agent",
    "crates/airl-codegen",
    "crates/airl-solver",
    "crates/airl-mlir",
    "crates/airl-driver",
    "crates/airl-rt",
]
# airl-mlir is excluded from default-members because it requires libzstd-dev
# and LLVM 19+ for melior. Build with GPU support via:
#   cargo build -p airl-driver --features mlir
# Or build the full workspace including mlir:
#   cargo build --workspace --features mlir
default-members = [
    "crates/airl-syntax",
    "crates/airl-types",
    "crates/airl-contracts",
    "crates/airl-runtime",
    "crates/airl-agent",
    "crates/airl-codegen",
    "crates/airl-solver",
    "crates/airl-driver",
    "crates/airl-rt",
]

[profile.release]
lto = "thin"
debug = false

[patch.crates-io]
cranelift-object = { path = "cranelift-object-patch" }

[workspace.package]
version = "1.1.0"
edition = "2021"
license = "PolyForm-Noncommercial-1.0.0"
