[package]
name = "airl-codegen"
version.workspace = true
edition.workspace = true

[dependencies]
airl-syntax = { path = "../airl-syntax" }
airl-types = { path = "../airl-types" }
cranelift-codegen = "0.130"
cranelift-frontend = "0.130"
cranelift-module = "0.130"
target-lexicon = "0.13"

[dev-dependencies]
cranelift-jit = "0.130"
