[package]
name = "airl-driver"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "airl_driver"
path = "src/lib.rs"

[[bin]]
name = "airl-driver"
path = "src/main.rs"

[dependencies]
airl-syntax = { path = "../airl-syntax" }
airl-types = { path = "../airl-types" }
airl-contracts = { path = "../airl-contracts" }
airl-runtime = { path = "../airl-runtime" }
airl-agent = { path = "../airl-agent" }
airl-solver = { path = "../airl-solver" }

[features]
mlir = ["airl-runtime/mlir"]
cuda = ["airl-runtime/cuda"]
jit = ["airl-runtime/jit"]
aot = ["airl-runtime/aot"]
