[package]
name = "airl-driver"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "airl_driver"
path = "src/lib.rs"

[[bin]]
name = "airl-driver"
path = "src/main.rs"

[dependencies]
airl-syntax = { path = "../airl-syntax" }
airl-types = { path = "../airl-types" }
airl-contracts = { path = "../airl-contracts" }
airl-runtime = { path = "../airl-runtime" }
airl-agent = { path = "../airl-agent" }
airl-solver = { path = "../airl-solver" }

[dev-dependencies]
tempfile = "3"

[features]
mlir = ["airl-runtime/mlir"]
cuda = ["airl-runtime/cuda"]
aot = ["airl-runtime/aot"]
rt_trace_sites = ["airl-runtime/rt_trace_sites"]
