[package]
name = "airl-rt"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
rand = "0.8"
regex = "1"
hex = "0.4"
crc32c = "0.6"
pbkdf2 = "0.12"
flate2 = "1"
snap = "1"
lz4_flex = "0.11"
zstd = "0.13"
rustls = "0.23"
rustls-pemfile = "2"
webpki-roots = "0.26"
libc = "0.2"
mimalloc = { version = "0.1", default-features = false }
