[package]
name = "airl-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
airl-syntax = { path = "../airl-syntax" }
airl-types = { path = "../airl-types" }
airl-contracts = { path = "../airl-contracts" }
airl-codegen = { path = "../airl-codegen" }
airl-mlir = { path = "../airl-mlir", optional = true }
airl-rt = { path = "../airl-rt", optional = true }
cranelift-codegen = { version = "0.130", optional = true }
cranelift-frontend = { version = "0.130", optional = true }
cranelift-jit = { version = "0.130", optional = true }
cranelift-object = { version = "0.130", optional = true }
cranelift-module = { version = "0.130", optional = true }
target-lexicon = { version = "0.13", optional = true }
object = { version = "0.36", optional = true }
serde_json = "1"
ureq = "2"

[features]
mlir = ["airl-mlir"]
cuda = ["mlir", "airl-mlir/cuda"]
jit = ["dep:cranelift-codegen", "dep:cranelift-frontend", "dep:cranelift-jit", "dep:cranelift-module", "dep:target-lexicon", "dep:airl-rt"]
aot = ["dep:cranelift-codegen", "dep:cranelift-frontend", "dep:cranelift-object", "dep:cranelift-module", "dep:target-lexicon", "dep:airl-rt", "dep:object"]
