[package]
name = "airl-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["rlib", "staticlib"]

[dependencies]
airl-syntax = { path = "../airl-syntax" }
airl-types = { path = "../airl-types" }
airl-contracts = { path = "../airl-contracts" }
airl-codegen = { path = "../airl-codegen" }
airl-mlir = { path = "../airl-mlir", optional = true }
airl-rt = { path = "../airl-rt" }
cranelift-codegen = { version = "0.130", optional = true }
cranelift-frontend = { version = "0.130", optional = true }
cranelift-object = { version = "0.130", optional = true }
cranelift-module = { version = "0.130", optional = true }
target-lexicon = { version = "0.13", optional = true }
object = { version = "0.38", optional = true }
serde_json = "1"
ureq = "2"
flate2 = "1"

[build-dependencies]
flate2 = "1"

[features]
mlir = ["airl-mlir"]
cuda = ["mlir", "airl-mlir/cuda"]
aot = ["dep:cranelift-codegen", "dep:cranelift-frontend", "dep:cranelift-object", "dep:cranelift-module", "dep:target-lexicon", "dep:object"]
